--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,15 @@
-theme: jekyll-theme-slate
+# Site settings
+title: Zoro Blog
+SEOTitle: 赵路的博客 | Zoro Blog
+header-img: img/post-bg-desk.jpg
+email: zhaolu04006718@gmail.com
+description: "Zoro's Blog."
+keyword: "Zoro, Zoro Blog, 赵路的博客, zoro, 赵路, Cocos, Unity, Game"
+url: "http://lulukdog.github.io"          # your host, for absolute URL
+baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
+github_repo: "https://github.com/lulukdog/lulukdog.github.io.git" # you code repository
+
+# Sidebar settings
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "Goals determine what you going to be!"
+sidebar-avatar: /img/about-zoro-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
