--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,10 @@ github_repo: "https://github.com/lulukdog/lulukdog.github.io.git" # you code rep
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Goals for One Piece!"
 sidebar-avatar: /img/about-zoro-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
+# Featured Tags
+featured-tags: true                     # 是否使用首页标签
+featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
